# cutty

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  codeql.yml
doc/: CONTRIBUTING.md  TODO.md  approx.md  check.md  dynamic.md  fixed_string.md  mixins.md  pretty_type.md  print.md  property.md  satellite.md  satellite_article.md  scope_hooks.md  separator.md  sequence.md  tags.md  test.md  units.md  with.md
include/cutty/: approx.hpp  check.hpp  dynamic.hpp  einsum.hpp  fixed_string.hpp  fraction.hpp  mixins.hpp  persist.hpp  persist_stl.h  persist_unix.h  persist_win32.h  pretty_type.hpp  print.hpp  property.hpp  satellite.hpp  scope_hooks.hpp  separator.hpp  sequence.hpp  sequence_fwd.hpp  shared_memory.hpp  tags.hpp  tensor.hpp  test.hpp  units.hpp  with.hpp
include/cutty/dynamic/: empty.hpp  empty_type.hpp  enable.hpp  function.hpp  get_type.hpp  instantiate.hpp  operators.hpp  reference.hpp  traits.hpp  type.hpp  type_impl.hpp
include/cutty/sequences/: base_sequence.hpp  concat_sequence.hpp  empty_sequence.hpp  fwd.hpp  generated_sequence.hpp  helpers.hpp  int_iterator.hpp  iterator_sequence.hpp  merge_sequence.hpp  output_sequence.hpp  pointer_sequence.hpp  repeat_sequence.hpp  select_sequence.hpp  sequence.hpp  sequence_ref.hpp  singleton_sequence.hpp  skip_sequence.hpp  skip_until_sequence.hpp  split_sequence.hpp  stored_sequence.hpp  take_sequence.hpp  take_while_sequence.hpp  virtual_sequence.hpp  where_sequence.hpp
samples/: approx.cpp  bools.cpp  check.cpp  dynamic_bools.cpp  dynamic_empty.cpp  dynamic_enable_user_type.cpp  dynamic_functions.cpp  dynamic_hello.cpp  dynamic_maps.cpp  dynamic_tutorial.cpp  dynamic_use_user_type.cpp  dynamic_user_type.hpp  empty.cpp  enable_user_type.cpp  hello.cpp  lists.cpp  maps.cpp  mixins.cpp  pretty_type.cpp  print.cpp  property.cpp  satellite.cpp  satellite_demo.cpp  scope_hooks.cpp  separator.cpp  tags.cpp  test.cpp  tutorial.cpp  units.cpp  use_user_type.cpp  with.cpp
samples/dynamic/: bools.cpp  empty.cpp  enable_user_type.cpp  functions.cpp  hello.cpp  maps.cpp  short_tutorial.cpp  tutorial.cpp  use_user_type.cpp
samples/sequence/: creation.cpp  csvreader.cpp  example1.cpp  example2.cpp  functions.cpp  functions.hpp  operations.cpp  primes.cpp  templates.cpp  transformations.cpp  writers.cpp
src/: Doxyfile.in  check.cpp  cutty.cpp  dynamic.cpp  dynamic_containers.cpp  dynamic_functions.cpp  dynamic_reference.cpp  dynamic_types.cpp  persist.cpp  persist_unix.cpp  persist_win32.cpp  reference.cpp  shared_memory.cpp  test.cpp  types.cpp  units.cpp
src/dynamic/: containers.cpp  containers2.cpp  containers3.cpp  dynamic.cpp  functions.cpp  reference.cpp  types.cpp  types2.cpp
test/: dynamic_functions.cpp  dynamic_test1.cpp  einsum.cpp  fixed_string.cpp  persist_test.cpp  pretty_type.cpp  print.cpp  property.cpp  shared_memory_test.cpp  tags.cpp  tensor.cpp  test.cpp  units.cpp
test/dynamic/: functions.cpp  test.cpp  test1.cpp
test/sequence/: test_sequence.cpp  test_sequence2.cpp
