cmake_minimum_required(VERSION 3.28)
project(cutty)
set(CMAKE_CXX_STANDARD 23)
enable_testing()

include_directories(include)

add_library(cutty
    src/check.cpp
    src/dynamic/dynamic.cpp
    src/dynamic/containers.cpp
    src/dynamic/functions.cpp
    src/dynamic/reference.cpp
    src/dynamic/types.cpp)

link_libraries(cutty)

add_executable(mixins samples/mixins.cpp)
add_executable(satellite samples/satellite.cpp)
add_executable(dynamic_functions test/dynamic/functions.cpp)
add_executable(dynamic_test1 test/dynamic/test1.cpp)
add_executable(dynamic_bools samples/dynamic/bools.cpp)
add_executable(dynamic_empty samples/dynamic/empty.cpp)
add_executable(dynamic_user_type samples/dynamic/enable_user_type.cpp samples/dynamic/use_user_type.cpp)
add_executable(dynamic_hello samples/dynamic/hello.cpp)
add_executable(dynamic_maps samples/dynamic/maps.cpp)
add_executable(dynamic_tutorial samples/dynamic/tutorial.cpp)
add_executable(pretty_type test/pretty_type.cpp)
add_executable(scope_hooks samples/scope_hooks.cpp)
add_executable(property_test test/property.cpp)
add_executable(property_sample samples/property.cpp)
add_executable(sequence_test test/sequence/test_sequence.cpp)
add_executable(sequence_creation samples/sequence/creation.cpp)
add_executable(sequence_csvreader samples/sequence/csvreader.cpp)
add_executable(sequence_example1 samples/sequence/example1.cpp)
add_executable(sequence_example2 samples/sequence/example2.cpp)
add_executable(sequence_functions samples/sequence/functions.cpp)
add_executable(sequence_operations samples/sequence/operations.cpp)
add_executable(sequence_primes samples/sequence/primes.cpp)
add_executable(sequence_templates samples/sequence/templates.cpp)
add_executable(sequence_transformations samples/sequence/transformations.cpp)
add_executable(sequence_writers samples/sequence/writers.cpp)

add_test(mixins mixins)
add_test(satellite satellite)
add_test(dynamic_bools dynamic_bools)
add_test(dynamic_empty dynamic_empty)
add_test(dynamic_functions dynamic_functions)
add_test(dynamic_user_type dynamic_user_type)
add_test(dynamic_hello dynamic_hello)
add_test(dynamic_maps dynamic_maps)
add_test(dynamic_tutorial dynamic_tutorial)
add_test(pretty_type pretty_type)
add_test(scope_hooks scope_hooks)
add_test(property_test property_test)
add_test(property_sample property_sample)
add_test(sequence sequence_test)
add_test(sequence_creation sequence_creation)
add_test(sequence_csvreader sequence_csvreader)

add_test(sequence_example1 sequence_example1)
add_test(sequence_example2 sequence_example2)
add_test(sequence_functions sequence_functions)
add_test(sequence_operations sequence_operations)
add_test(sequence_primes sequence_primes)
add_test(sequence_templates sequence_templates)
add_test(sequence_transformations sequence_transformations)
add_test(sequence_writers sequence_writers)
